--- a/src/main/webapp/app/entities/asociacion/asociacion-detail.html
+++ b/src/main/webapp/app/entities/asociacion/asociacion-detail.html
@@ -50,7 +50,7 @@
         <hr>
         <dt><span translate="asoApp.asociacion.user">user</span></dt>
         <dd>
-            {{vm.asociacion.user.name}}
+            {{vm.asociacion.user.login}}
         </dd>
         <hr>
     </dl>
