--- a/src/main/webapp/app/entities/asociacion/asociacions.html
+++ b/src/main/webapp/app/entities/asociacion/asociacions.html
@@ -28,7 +28,7 @@
                     <th jh-sort-by="streetAdress"><span translate="asoApp.asociacion.streetAdress">StreetAdress</span> <span class="glyphicon glyphicon-sort"></span></th>
                     <th jh-sort-by="lat"><span translate="asoApp.asociacion.lat">Lat</span> <span class="glyphicon glyphicon-sort"></span></th>
                     <th jh-sort-by="lng"><span translate="asoApp.asociacion.lng">Lng</span> <span class="glyphicon glyphicon-sort"></span></th>
-                    <th jh-sort-by="user.name"><span translate="asoApp.asociacion.user">user</span> <span class="glyphicon glyphicon-sort"></span></th>
+                    <th jh-sort-by="user.login"><span translate="asoApp.asociacion.user">user</span> <span class="glyphicon glyphicon-sort"></span></th>
                     <th></th>
                 </tr>
             </thead>
@@ -45,7 +45,7 @@
                     <td>{{asociacion.lat}}</td>
                     <td>{{asociacion.lng}}</td>
                     <td>
-                        {{asociacion.user.name}}
+                        {{asociacion.user.login}}
                     </td>
                     <td class="text-right">
                         <div class="btn-group flex-btn-group-container">
