--- a/src/main/webapp/app/entities/evento/evento-detail.html
+++ b/src/main/webapp/app/entities/evento/evento-detail.html
@@ -3,9 +3,9 @@
     <h2><span translate="asoApp.evento.detail.title">Evento</span> {{vm.evento.id}}</h2>
     <hr>
     <dl class="dl-horizontal">
-        <dt><span translate="asoApp.evento.nombre">Nombre</dt></dt>
+        <dt><span translate="asoApp.evento.name">Name</dt></dt>
         <dd>
-            <span>{{vm.evento.nombre}}<span>
+            <span>{{vm.evento.name}}<span>
         </dd>
         <hr>
         <dt><span translate="asoApp.evento.fecha">Fecha</dt></dt>
