--- a/src/main/webapp/app/entities/evento/evento-dialog.html
+++ b/src/main/webapp/app/entities/evento/evento-dialog.html
@@ -14,9 +14,9 @@
                     ng-model="vm.evento.id" readonly />
         </div>
         <div class="form-group">
-            <label class="control-label" translate="asoApp.evento.nombre" for="field_nombre">Nombre</label>
-            <input type="text" class="form-control" name="nombre" id="field_nombre"
-                    ng-model="vm.evento.nombre"
+            <label class="control-label" translate="asoApp.evento.name" for="field_name">Name</label>
+            <input type="text" class="form-control" name="name" id="field_name"
+                    ng-model="vm.evento.name"
                      />
         </div>
         <div class="form-group">
