--- a/src/main/webapp/app/entities/imagen/imagen-detail.html
+++ b/src/main/webapp/app/entities/imagen/imagen-detail.html
@@ -10,7 +10,7 @@
         <hr>
         <dt><span translate="asoApp.imagen.user">user</span></dt>
         <dd>
-            {{vm.imagen.user.name}}
+            {{vm.imagen.user.login}}
         </dd>
         <hr>
         <dt><span translate="asoApp.imagen.imagenaso">imagenaso</span></dt>
