--- a/src/main/webapp/app/entities/inscripcion-aso/inscripcion-aso-detail.html
+++ b/src/main/webapp/app/entities/inscripcion-aso/inscripcion-aso-detail.html
@@ -20,7 +20,7 @@
         <hr>
         <dt><span translate="asoApp.inscripcionAso.user">user</span></dt>
         <dd>
-            {{vm.inscripcionAso.user.name}}
+            {{vm.inscripcionAso.user.login}}
         </dd>
         <hr>
     </dl>
