--- a/src/main/webapp/app/entities/inscripcion-aso/inscripcion-asos.html
+++ b/src/main/webapp/app/entities/inscripcion-aso/inscripcion-asos.html
@@ -35,7 +35,7 @@
                         <a ui-sref="asociacion-detail({id:inscripcionAso.asociacion.id})">{{inscripcionAso.asociacion.name}}</a>
                     </td>
                     <td>
-                        {{inscripcionAso.user.name}}
+                        {{inscripcionAso.user.login}}
                     </td>
                     <td class="text-right">
                         <div class="btn-group flex-btn-group-container">
