--- a/src/main/webapp/app/entities/inscripcion-evento/inscripcion-evento-detail.html
+++ b/src/main/webapp/app/entities/inscripcion-evento/inscripcion-evento-detail.html
@@ -20,7 +20,7 @@
         <hr>
         <dt><span translate="asoApp.inscripcionEvento.user">user</span></dt>
         <dd>
-            {{vm.inscripcionEvento.user.name}}
+            {{vm.inscripcionEvento.user.login}}
         </dd>
         <hr>
     </dl>
