--- a/src/main/webapp/app/entities/inscripcion-evento/inscripcion-eventos.html
+++ b/src/main/webapp/app/entities/inscripcion-evento/inscripcion-eventos.html
@@ -35,7 +35,7 @@
                         <a ui-sref="evento-detail({id:inscripcionEvento.evento.id})">{{inscripcionEvento.evento.name}}</a>
                     </td>
                     <td>
-                        {{inscripcionEvento.user.name}}
+                        {{inscripcionEvento.user.login}}
                     </td>
                     <td class="text-right">
                         <div class="btn-group flex-btn-group-container">
