--- a/src/main/webapp/app/entities/asociacion/asociacion-dialog.html
+++ b/src/main/webapp/app/entities/asociacion/asociacion-dialog.html
@@ -74,7 +74,7 @@
 
         <div class="form-group">
             <label translate="asoApp.asociacion.user" for="field_user">user</label>
-            <select class="form-control" id="field_user" name="user" ng-model="vm.asociacion.user" ng-options="user as user.name for user in vm.users track by user.id">
+            <select class="form-control" id="field_user" name="user" ng-model="vm.asociacion.user" ng-options="user as user.login for user in vm.users track by user.id">
                 <option value=""></option>
             </select>
         </div>
