--- a/src/main/webapp/app/entities/evento/eventos.html
+++ b/src/main/webapp/app/entities/evento/eventos.html
@@ -19,7 +19,7 @@
             <thead>
                 <tr jh-sort="vm.predicate" ascending="vm.reverse" callback="vm.reset()">
                     <th jh-sort-by="id"><span translate="global.field.id">ID</span> <span class="glyphicon glyphicon-sort"></span></th>
-                    <th jh-sort-by="nombre"><span translate="asoApp.evento.nombre">Nombre</span> <span class="glyphicon glyphicon-sort"></span></th>
+                    <th jh-sort-by="name"><span translate="asoApp.evento.name">Name</span> <span class="glyphicon glyphicon-sort"></span></th>
                     <th jh-sort-by="fecha"><span translate="asoApp.evento.fecha">Fecha</span> <span class="glyphicon glyphicon-sort"></span></th>
                     <th jh-sort-by="streetAdress"><span translate="asoApp.evento.streetAdress">StreetAdress</span> <span class="glyphicon glyphicon-sort"></span></th>
                     <th jh-sort-by="lat"><span translate="asoApp.evento.lat">Lat</span> <span class="glyphicon glyphicon-sort"></span></th>
@@ -34,7 +34,7 @@
             <tbody infinite-scroll="vm.loadPage(vm.page + 1)" infinite-scroll-disabled="vm.page >= vm.links['last']">
                 <tr ng-repeat="evento in vm.eventos track by evento.id">
                     <td><a ui-sref="evento-detail({id:evento.id})">{{evento.id}}</a></td>
-                    <td>{{evento.nombre}}</td>
+                    <td>{{evento.name}}</td>
                     <td>{{evento.fecha | date:'medium'}}</td>
                     <td>{{evento.streetAdress}}</td>
                     <td>{{evento.lat}}</td>
