--- a/src/main/webapp/app/entities/favorito/favorito-dialog.html
+++ b/src/main/webapp/app/entities/favorito/favorito-dialog.html
@@ -14,6 +14,12 @@
                     ng-model="vm.favorito.id" readonly />
         </div>
         <div class="form-group">
+            <label class="control-label" translate="asoApp.favorito.like" for="field_like">Like</label>
+            <input type="checkbox" class="form-control" name="like" id="field_like"
+                    ng-model="vm.favorito.like"
+                     />
+        </div>
+        <div class="form-group">
             <label class="control-label" translate="asoApp.favorito.likes" for="field_likes">Likes</label>
             <input type="number" class="form-control" name="likes" id="field_likes"
                     ng-model="vm.favorito.likes"
@@ -28,7 +34,7 @@
         </div>
         <div class="form-group">
             <label translate="asoApp.favorito.user" for="field_user">user</label>
-            <select class="form-control" id="field_user" name="user" ng-model="vm.favorito.user" ng-options="user as user.name for user in vm.users track by user.id">
+            <select class="form-control" id="field_user" name="user" ng-model="vm.favorito.user" ng-options="user as user.login for user in vm.users track by user.id">
                 <option value=""></option>
             </select>
         </div>
