--- a/src/main/webapp/app/entities/imagen/imagen-dialog.html
+++ b/src/main/webapp/app/entities/imagen/imagen-dialog.html
@@ -22,7 +22,7 @@
 
         <div class="form-group">
             <label translate="asoApp.imagen.user" for="field_user">user</label>
-            <select class="form-control" id="field_user" name="user" ng-model="vm.imagen.user" ng-options="user as user.name for user in vm.users track by user.id">
+            <select class="form-control" id="field_user" name="user" ng-model="vm.imagen.user" ng-options="user as user.login for user in vm.users track by user.id">
                 <option value=""></option>
             </select>
         </div>
