--- a/src/main/webapp/app/entities/inscripcion-aso/inscripcion-aso-dialog.html
+++ b/src/main/webapp/app/entities/inscripcion-aso/inscripcion-aso-dialog.html
@@ -38,7 +38,7 @@
         </div>
         <div class="form-group">
             <label translate="asoApp.inscripcionAso.user" for="field_user">user</label>
-            <select class="form-control" id="field_user" name="user" ng-model="vm.inscripcionAso.user" ng-options="user as user.name for user in vm.users track by user.id">
+            <select class="form-control" id="field_user" name="user" ng-model="vm.inscripcionAso.user" ng-options="user as user.login for user in vm.users track by user.id">
                 <option value=""></option>
             </select>
         </div>
